ATLANTIC-720 Added new Link Class for Cashier

--- a/web/sites/zedbet/config/sync/field.storage.paragraph.field_link_class.yml
+++ b/web/sites/zedbet/config/sync/field.storage.paragraph.field_link_class.yml
@@ -73,6 +73,9 @@ settings:
     -
       value: dafabet-connect
       label: 'Dafabet Connect'
+    -
+      value: cashier
+      label: Cashier
   allowed_values_function: ''
 module: options
 locked: false
