--- a/web/sites/jamboree-casino/config/sync/core.extension.yml
+++ b/web/sites/jamboree-casino/config/sync/core.extension.yml
@@ -94,6 +94,7 @@ module:
   views_data_export: 0
   views_ui: 0
   webcomposer_affilates: 0
+  webcomposer_audit: 0
   webcomposer_avaya: 0
   webcomposer_cache: 0
   webcomposer_config: 0
