--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -30,8 +30,6 @@ dependencies:
     - taxonomy.vocabulary.arcade_game_category
     - taxonomy.vocabulary.arcade_game_filter
     - taxonomy.vocabulary.desktop_game_category
-    - taxonomy.vocabulary.game_filter_casino
-    - taxonomy.vocabulary.game_filter_games
     - taxonomy.vocabulary.game_provider
     - taxonomy.vocabulary.game_tag
     - taxonomy.vocabulary.game_type
@@ -1329,6 +1327,15 @@ display:
           admin_label: 'field_game_provider: Taxonomy term'
           required: true
           plugin_id: standard
+        field_game_category_export:
+          id: field_game_category_export
+          table: zipang_desktop_games_entity__field_game_category
+          field: field_game_category_export
+          relationship: none
+          group_type: group
+          admin_label: 'field_game_category: Taxonomy term'
+          required: false
+          plugin_id: standard
       defaults:
         relationships: false
         title: false
@@ -1343,6 +1350,7 @@ display:
         options:
           formats:
             json: json
+          pager: 1
       row:
         type: data_field
         options:
@@ -1370,6 +1378,9 @@ display:
               raw_output: false
             field_game_tag_export:
               alias: game_tag
+              raw_output: false
+            field_game_code:
+              alias: game_code
               raw_output: false
             field_game_code_icore_export:
               alias: game_code_icore
@@ -1421,9 +1432,6 @@ display:
               raw_output: false
             field_provider_product_export:
               alias: provider_product
-              raw_output: false
-            field_game_provider_code:
-              alias: provider_code
               raw_output: false
       fields:
         id:
@@ -1928,6 +1936,69 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
+        field_game_code:
+          id: field_game_code
+          table: zipang_desktop_games_entity__field_game_code
+          field: field_game_code
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_game_code_icore_export:
           id: field_game_code_icore_export
           table: zipang_desktop_games_entity__field_game_code_icore
@@ -2996,7 +3067,7 @@ display:
       pager:
         type: full
         options:
-          items_per_page: 100
+          items_per_page: 20
           offset: 0
           id: 0
           total_pages: null
@@ -3098,98 +3169,6 @@ display:
           type: textfield
           limit: true
           vid: desktop_game_category
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
-        field_game_filter_games_target_id:
-          id: field_game_filter_games_target_id
-          table: zipang_desktop_games_entity__field_game_filter_games
-          field: field_game_filter_games_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_game_filter_games_target_id_op
-            label: 'Game Filter (games) (field_game_filter_games)'
-            description: ''
-            use_operator: false
-            operator: field_game_filter_games_target_id_op
-            identifier: game_filter
-            required: false
-            remember: false
-            multiple: true
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              e: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: textfield
-          limit: true
-          vid: game_filter_games
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
-        field_game_filter_target_id:
-          id: field_game_filter_target_id
-          table: zipang_desktop_games_entity__field_game_filter
-          field: field_game_filter_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_game_filter_target_id_op
-            label: 'Game Filter (casino) (field_game_filter)'
-            description: ''
-            use_operator: false
-            operator: field_game_filter_target_id_op
-            identifier: casino_filter
-            required: false
-            remember: false
-            multiple: true
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              e: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: textfield
-          limit: true
-          vid: game_filter_casino
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
@@ -3384,7 +3363,7 @@ display:
           relationship: field_game_provider_export
           group_type: group
           admin_label: ''
-          operator: contains
+          operator: '='
           value: ''
           group: 1
           exposed: true
@@ -3457,6 +3436,127 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: string
+        field_enable_game_value:
+          id: field_enable_game_value
+          table: zipang_desktop_games_entity__field_enable_game
+          field: field_enable_game_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Enable Game Desktop (field_enable_game)'
+            description: ''
+            use_operator: false
+            operator: field_enable_game_value_op
+            identifier: enable_desktop
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+          is_grouped: false
+          group_info:
+            label: 'Enable Game Desktop (field_enable_game)'
+            description: null
+            identifier: field_enable_game_value
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items:
+              1: {  }
+              2: {  }
+              3: {  }
+          plugin_id: boolean
+        field_enable_game_mobile_value:
+          id: field_enable_game_mobile_value
+          table: zipang_desktop_games_entity__field_enable_game_mobile
+          field: field_enable_game_mobile_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Enable Game Mobile (field_enable_game_mobile)'
+            description: ''
+            use_operator: false
+            operator: field_enable_game_mobile_value_op
+            identifier: enable_mobile
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
+        field_category_id_value:
+          id: field_category_id_value
+          table: taxonomy_term__field_category_id
+          field: field_category_id_value
+          relationship: field_game_category_export
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_category_id_value_op
+            label: 'Category ID (field_category_id)'
+            description: ''
+            use_operator: false
+            operator: field_category_id_value_op
+            identifier: game_category
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
@@ -3481,7 +3581,122 @@ display:
           table: zipang_desktop_games_entity__field_game_title
           field: field_game_title_value
           plugin_id: standard
-      arguments: {  }
+      arguments:
+        field_game_filter_games_target_id:
+          id: field_game_filter_games_target_id
+          table: zipang_desktop_games_entity__field_game_filter_games
+          field: field_game_filter_games_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: query_parameter
+          default_argument_options:
+            query_param: game_filter
+            fallback: all
+            multiple: and
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          not: false
+          plugin_id: numeric
+        field_game_filter_target_id:
+          id: field_game_filter_target_id
+          table: zipang_desktop_games_entity__field_game_filter
+          field: field_game_filter_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: query_parameter
+          default_argument_options:
+            query_param: casino_filter
+            fallback: all
+            multiple: and
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          not: false
+          plugin_id: numeric
+        field_game_provider_code_value:
+          id: field_game_provider_code_value
+          table: taxonomy_term__field_game_provider_code
+          field: field_game_provider_code_value
+          relationship: field_game_provider_export
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: query_parameter
+          default_argument_options:
+            query_param: game_filter_provider
+            fallback: all
+            multiple: and
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
+          break_phrase: true
+          plugin_id: string
     cache_metadata:
       max-age: -1
       contexts:
@@ -3502,6 +3717,7 @@ display:
         - 'config:field.storage.zipang_desktop_games_entity.field_enable_game_mobile'
         - 'config:field.storage.zipang_desktop_games_entity.field_external_game_id'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_category'
+        - 'config:field.storage.zipang_desktop_games_entity.field_game_code'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_code_icore'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_description'
         - 'config:field.storage.zipang_desktop_games_entity.field_game_filter'
