--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -1220,6 +1220,52 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: boolean
+        field_game_type_target_id:
+          id: field_game_type_target_id
+          table: zipang_desktop_games_entity__field_game_type
+          field: field_game_type_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_game_type_target_id_op
+            label: 'Game Type (field_game_type)'
+            description: ''
+            use_operator: false
+            operator: field_game_type_target_id_op
+            identifier: field_game_type_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: game_type
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       filter_groups:
         operator: AND
         groups:
@@ -3559,10 +3605,93 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           plugin_id: string
+        field_game_title_value_1:
+          id: field_game_title_value_1
+          table: zipang_desktop_games_entity__field_game_title
+          field: field_game_title_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 2
+          exposed: true
+          expose:
+            operator_id: field_game_title_value_1_op
+            label: 'Game Title (field_game_title)'
+            description: ''
+            use_operator: false
+            operator: field_game_title_value_1_op
+            identifier: search_title
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: string
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: field_game_provider_export
+          group_type: group
+          admin_label: ''
+          operator: contains
+          value: ''
+          group: 2
+          exposed: true
+          expose:
+            operator_id: name_op
+            label: Name
+            description: ''
+            use_operator: false
+            operator: name_op
+            identifier: search_provider
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: string
       filter_groups:
         operator: AND
         groups:
           1: AND
+          2: OR
       sorts:
         weight:
           id: weight
@@ -3658,6 +3787,43 @@ display:
           break_phrase: true
           not: false
           plugin_id: numeric
+        field_arcade_game_filter_target_id:
+          id: field_arcade_game_filter_target_id
+          table: zipang_desktop_games_entity__field_arcade_game_filter
+          field: field_arcade_game_filter_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: query_parameter
+          default_argument_options:
+            query_param: arcade_filter
+            fallback: all
+            multiple: and
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: true
+          not: false
+          plugin_id: numeric
         field_game_provider_code_value:
           id: field_game_provider_code_value
           table: taxonomy_term__field_game_provider_code
@@ -3699,43 +3865,6 @@ display:
           transform_dash: false
           break_phrase: true
           plugin_id: string
-        field_arcade_game_filter_target_id:
-          id: field_arcade_game_filter_target_id
-          table: zipang_desktop_games_entity__field_arcade_game_filter
-          field: field_arcade_game_filter_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: query_parameter
-          default_argument_options:
-            query_param: arcade_filter
-            fallback: all
-            multiple: and
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            items_per_page: 25
-            override: false
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: false
-          validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
-          break_phrase: true
-          not: false
-          plugin_id: numeric
     cache_metadata:
       max-age: -1
       contexts:
