--- a/web/sites/zedbet/config/sync/core.entity_view_display.node.promotion.teaser.yml
+++ b/web/sites/zedbet/config/sync/core.entity_view_display.node.promotion.teaser.yml
@@ -1,29 +1,43 @@
-uuid: 8ff25d92-bbae-4ceb-836f-fb8b78ff37f5
+uuid: b4136baf-28f3-4b7a-b47d-00e8b58102ee
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.promotion.body
     - node.type.promotion
   module:
-    - text
     - user
 id: node.promotion.teaser
 targetEntityType: node
 bundle: promotion
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
-    region: content
   links:
     weight: 100
     region: content
 hidden:
+  body: true
+  field_banner_content: true
+  field_banner_content_post: true
+  field_banner_link: true
+  field_banner_link_post: true
+  field_banner_link_target: true
+  field_banner_link_target_post: true
+  field_body_post: true
+  field_hide_countdown: true
+  field_hide_promotion: true
+  field_hide_right_side_block: true
+  field_image: true
+  field_image_post: true
+  field_link_target: true
+  field_log_in_state: true
+  field_mark_as_featured: true
+  field_meta_tags: true
+  field_product: true
+  field_product_subfilter: true
+  field_promotion_link_target: true
+  field_promotion_summary: true
+  field_promotion_summary_link: true
+  field_segment_name: true
+  field_summary_image: true
   langcode: true
