--- a/web/sites/zedbet/config/sync/pathauto.pattern.node_pattern.yml
+++ b/web/sites/zedbet/config/sync/pathauto.pattern.node_pattern.yml
@@ -9,15 +9,18 @@ label: 'node pattern'
 type: 'canonical_entities:node'
 pattern: '/[node:title]'
 selection_criteria:
-  49eb03ca-f54d-4254-bc74-144ecad9e979:
+  cfd7dfc5-e001-4ce6-8e32-ca6d4f1f1e3b:
     id: node_type
     bundles:
+      arcade_game: arcade_game
+      game: game
       games_live_dealer: games_live_dealer
       page: page
+      promotion: promotion
     negate: false
     context_mapping:
       node: node
-    uuid: 49eb03ca-f54d-4254-bc74-144ecad9e979
+    uuid: cfd7dfc5-e001-4ce6-8e32-ca6d4f1f1e3b
 selection_logic: and
 weight: -5
 relationships: {  }
