WEBSITE-4828 - Implement scheduled audit log cleanup

--- a/web/modules/custom/webcomposer_audit/webcomposer_audit.links.menu.yml
+++ b/web/modules/custom/webcomposer_audit/webcomposer_audit.links.menu.yml
@@ -10,3 +10,9 @@ webcomposer_audit.audit_form:
   description: 'Views audit log entries'
   parent: webcomposer_audit.admin_list
 
+webcomposer_audit.cleanup_config_form:
+  title: 'Cleanup Audit Logs Config'
+  route_name: webcomposer_audit.cleanup_config_form
+  description: 'Configure Audit Log Cleanup'
+  parent: webcomposer_audit.admin_list
+
