--- a/web/modules/custom/webcomposer_audit/webcomposer_audit.routing.yml
+++ b/web/modules/custom/webcomposer_audit/webcomposer_audit.routing.yml
@@ -16,6 +16,16 @@ webcomposer_audit.audit_form:
   options:
     _admin_route: TRUE
 
+webcomposer_audit.cleanup_config_form:
+  path: '/admin/config/webcomposer/audit/cleanupconfig'
+  defaults:
+    _form: '\Drupal\webcomposer_audit\Form\CleanupConfigForm'
+    _title: 'Cleanup Audit Logs Config'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
+
 webcomposer_audit.audit_item_view:
   path: '/admin/config/webcomposer/audit/view/{id}'
   defaults:
