--- a/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list_v4.yml
@@ -1266,6 +1266,52 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
+        field_all_games_category_target_id:
+          id: field_all_games_category_target_id
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_all_games_category_target_id_op
+            label: 'All Games Category (field_all_games_category)'
+            description: ''
+            use_operator: false
+            operator: field_all_games_category_target_id_op
+            identifier: field_all_games_category_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: all_games_category
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       filter_groups:
         operator: AND
         groups:
@@ -1486,6 +1532,9 @@ display:
               raw_output: false
             field_provider_product_export:
               alias: provider_product
+              raw_output: false
+            field_game_provider:
+              alias: provider_search
               raw_output: false
       fields:
         id:
@@ -3226,52 +3275,6 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
-        field_all_games_category_target_id:
-          id: field_all_games_category_target_id
-          table: zipang_desktop_games_entity__field_all_games_category
-          field: field_all_games_category_target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: or
-          value: {  }
-          group: 1
-          exposed: true
-          expose:
-            operator_id: field_all_games_category_target_id_op
-            label: 'All Games Category (field_all_games_category)'
-            description: ''
-            use_operator: false
-            operator: field_all_games_category_target_id_op
-            identifier: all_games_category
-            required: false
-            remember: false
-            multiple: true
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              e: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          type: textfield
-          limit: true
-          vid: all_games_category
-          hierarchy: false
-          error_message: true
-          plugin_id: taxonomy_index_tid
         field_game_type_target_id:
           id: field_game_type_target_id
           table: zipang_desktop_games_entity__field_game_type
@@ -3687,6 +3690,98 @@ display:
           entity_type: taxonomy_term
           entity_field: name
           plugin_id: string
+        field_all_games_category_target_id:
+          id: field_all_games_category_target_id
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_all_games_category_target_id_op
+            label: 'All Games Category (field_all_games_category)'
+            description: ''
+            use_operator: false
+            operator: field_all_games_category_target_id_op
+            identifier: all_games_categories
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: textfield
+          limit: true
+          vid: all_games_category
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+        field_all_games_category_target_id_1:
+          id: field_all_games_category_target_id_1
+          table: zipang_desktop_games_entity__field_all_games_category
+          field: field_all_games_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: 'not empty'
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_all_games_category_target_id_1_op
+            label: 'All Games Category (field_all_games_category)'
+            description: ''
+            use_operator: false
+            operator: field_all_games_category_target_id_1_op
+            identifier: all_games_category
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: textfield
+          limit: true
+          vid: all_games_category
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
       filter_groups:
         operator: AND
         groups:
