--- a/web/sites/registration-row/config/sync/core.entity_form_display.registration_theme_entity.registration_theme_entity.default.yml
+++ b/web/sites/registration-row/config/sync/core.entity_form_display.registration_theme_entity.registration_theme_entity.default.yml
@@ -20,6 +20,7 @@ dependencies:
     - field.field.registration_theme_entity.registration_theme_entity.field_registration_button_font_c
     - field.field.registration_theme_entity.registration_theme_entity.field_registration_button_form_c
     - field.field.registration_theme_entity.registration_theme_entity.field_registration_button_form_h
+    - field.field.registration_theme_entity.registration_theme_entity.field_registration_form
     - field.field.registration_theme_entity.registration_theme_entity.field_registration_theme_code
     - field.field.registration_theme_entity.registration_theme_entity.field_separator_color
     - field.field.registration_theme_entity.registration_theme_entity.field_steptwo_banner
@@ -256,6 +257,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: color_field_widget_html5
+    region: content
+  field_registration_form:
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_registration_theme_code:
     weight: 1
