--- a/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_category_arcade.yml
+++ b/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_category_arcade.yml
@@ -14,7 +14,7 @@ bundle: games_collection
 label: 'Game Category Arcade'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
