--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_thumbnail.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_thumbnail.yml
@@ -7,6 +7,12 @@ dependencies:
     - node.type.game
   module:
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      alt: alt
+      title: title
+      file: '0'
 id: node.game.field_game_thumbnail
 field_name: field_game_thumbnail
 entity_type: node
@@ -14,7 +20,7 @@ bundle: game
 label: 'Game Thumbnail Image'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
