--- a/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_games_slots.yml
+++ b/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_games_slots.yml
@@ -13,7 +13,7 @@ bundle: games_collection
 label: 'Games - Slots'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
