--- a/web/sites/zedbet/config/sync/field.field.node.game.field_all_category_ribbon_config.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_all_category_ribbon_config.yml
@@ -12,7 +12,7 @@ bundle: game
 label: 'All Category Ribbon Configuration'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
