--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_info.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_info.yml
@@ -14,7 +14,7 @@ bundle: game
 label: 'Game Info Content'
 description: 'Content that will be displayed upon clicking Game Info button.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
