--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_info_toggle.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_info_toggle.yml
@@ -12,7 +12,7 @@ bundle: game
 label: 'Show Game Info Button'
 description: 'Uncheck this if you want the game info to be hidden for this game.'
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
