--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_integration.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_integration.yml
@@ -12,7 +12,7 @@ bundle: game
 label: 'Integration Parameters'
 description: 'Game URL parameter'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
