--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_meta_tags.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_meta_tags.yml
@@ -14,7 +14,7 @@ bundle: game
 label: 'Meta Tags'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 'a:0:{}'
