--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_play_for_fun_toggle.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_play_for_fun_toggle.yml
@@ -12,7 +12,7 @@ bundle: game
 label: 'Show Play for Fun Button'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
