--- a/web/sites/zedbet/config/sync/field.field.node.game.field_game_type.yml
+++ b/web/sites/zedbet/config/sync/field.field.node.game.field_game_type.yml
@@ -14,7 +14,7 @@ bundle: game
 label: 'Game Type'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value:
   -
     value: '0'
