--- a/web/sites/zedbet/config/sync/field.field.taxonomy_term.game_categories.field_game_categories_disable.yml
+++ b/web/sites/zedbet/config/sync/field.field.taxonomy_term.game_categories.field_game_categories_disable.yml
@@ -12,7 +12,7 @@ bundle: game_categories
 label: Disable
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
