--- a/web/sites/zedbet/config/sync/field.field.taxonomy_term.game_filters.field_disable_filter.yml
+++ b/web/sites/zedbet/config/sync/field.field.taxonomy_term.game_filters.field_disable_filter.yml
@@ -12,7 +12,7 @@ bundle: game_filters
 label: Disable
 description: 'If checked, this filter will not be displayed.'
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     value: 0
