Update Sync Files

--- a/web/sites/zedbet/config/sync/core.base_field_override.games_collection.games_collection.user_id.yml
+++ b/web/sites/zedbet/config/sync/core.base_field_override.games_collection.games_collection.user_id.yml
@@ -11,7 +11,7 @@ bundle: games_collection
 label: 'Authored by'
 description: 'The user ID of author of the Games Collection entity.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
