--- a/web/sites/mobile-zedbet/config/sync/views.view.games_collection_entities.yml
+++ b/web/sites/mobile-zedbet/config/sync/views.view.games_collection_entities.yml
@@ -1,4 +1,4 @@
-uuid: 5f5298f5-04a1-4411-87f1-df4df891701b
+uuid: 37b5415e-b61d-47de-ae0c-aec6544c8a38
 langcode: en
 status: true
 dependencies:
@@ -53,33 +53,11 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: some
+        type: none
         options:
-          items_per_page: 10
           offset: 0
       style:
-        type: table
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
-          override: true
-          sticky: false
-          caption: ''
-          summary: ''
-          description: ''
-          columns:
-            name: name
-          info:
-            name:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          default: '-1'
-          empty_table: false
+        type: default
       row:
         type: fields
       fields:
@@ -147,122 +125,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_product:
-          id: field_product
-          table: games_collection__field_product
-          field: field_product
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Product
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: list_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-      filters:
-        langcode:
-          id: langcode
-          table: games_collection_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: games_collection
-          entity_field: langcode
-          plugin_id: language
-      sorts:
-        delta:
-          id: delta
-          table: games_collection__field_games_slots
-          field: delta
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: standard
+      filters: {  }
+      sorts: {  }
       title: 'Games Collection Entities'
       header: {  }
       footer: {  }
@@ -270,14 +134,12 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-      tags:
-        - 'config:field.storage.games_collection.field_product'
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -286,13 +148,39 @@ display:
     display_options:
       display_extenders: {  }
       path: admin/games/collections/games_collection
-      pager:
-        type: none
+      style:
+        type: table
         options:
-          offset: 0
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          override: true
+          sticky: false
+          caption: ''
+          summary: ''
+          description: ''
+          columns:
+            name: name
+          info:
+            name:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          default: '-1'
+          empty_table: false
       defaults:
-        pager: false
+        style: false
+        row: false
         fields: false
+        filters: false
+        filter_groups: false
+        group_by: false
+      row:
+        type: fields
+        options: {  }
       fields:
         name:
           table: games_collection_field_data
@@ -471,6 +359,52 @@ display:
           destination: false
           entity_type: games_collection
           plugin_id: entity_operations
+      filters:
+        langcode:
+          id: langcode
+          table: games_collection_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: games_collection
+          entity_field: langcode
+          plugin_id: language
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      group_by: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -492,13 +426,16 @@ display:
           uses_fields: false
           formats:
             json: json
-          pager: 0
       defaults:
         style: false
         row: false
-        title: false
         fields: false
         relationships: false
+        filters: false
+        filter_groups: false
+        sorts: false
+        title: false
+        cache: false
       row:
         type: data_field
         options:
@@ -506,14 +443,10 @@ display:
             name:
               alias: ''
               raw_output: false
-            field_product:
-              alias: ''
-              raw_output: false
       pager:
         type: none
         options:
           offset: 0
-      title: 'Games Collection'
       fields:
         field_type:
           id: field_type
@@ -578,8 +511,8 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
-        field_game_code:
-          id: field_game_code
+        field_game_code_1:
+          id: field_game_code_1
           table: node__field_game_code
           field: field_game_code
           relationship: field_games_slots
@@ -651,6 +584,150 @@ display:
           admin_label: 'field_games_slots: Content'
           required: true
           plugin_id: standard
+      filters:
+        langcode_1:
+          id: langcode_1
+          table: node_field_data
+          field: langcode
+          relationship: field_games_slots
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: langcode
+          plugin_id: language
+        field_product_value:
+          id: field_product_value
+          table: games_collection__field_product
+          field: field_product_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: and
+          value:
+            mobile-nextbet-slots: mobile-nextbet-slots
+          group: 1
+          exposed: false
+          expose:
+            operator_id: field_product_value_op
+            label: 'Product (field_product)'
+            description: ''
+            use_operator: false
+            operator: field_product_value_op
+            identifier: product
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: list_field
+        langcode:
+          id: langcode
+          table: games_collection_field_data
+          field: langcode
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: games_collection
+          entity_field: langcode
+          plugin_id: language
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      sorts:
+        delta:
+          id: delta
+          table: games_collection__field_games_slots
+          field: delta
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+      title: 'Games Collection'
+      cache:
+        type: none
+        options: {  }
     cache_metadata:
       max-age: -1
       contexts:
