--- a/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_product.yml
+++ b/web/sites/zedbet/config/sync/field.field.games_collection.games_collection.field_product.yml
@@ -14,7 +14,7 @@ bundle: games_collection
 label: Product
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
