--- a/web/sites/zedbet/config/sync/language.content_settings.games_collection.games_collection.yml
+++ b/web/sites/zedbet/config/sync/language.content_settings.games_collection.games_collection.yml
@@ -7,11 +7,11 @@ dependencies:
     - games_collection
 third_party_settings:
   content_translation:
-    enabled: false
+    enabled: true
     bundle_settings:
       untranslatable_fields_hide: '0'
 id: games_collection.games_collection
 target_entity_type_id: games_collection
 target_bundle: games_collection
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
