--- a/web/sites/mobile-zedbet/config/sync/core.entity_form_display.games_collection.games_collection.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_form_display.games_collection.games_collection.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.games_collection.games_collection.field_game_category
+    - field.field.games_collection.games_collection.field_game_category_slots
     - field.field.games_collection.games_collection.field_games
     - field.field.games_collection.games_collection.field_games_slots
     - field.field.games_collection.games_collection.field_product
@@ -15,6 +17,54 @@ targetEntityType: games_collection
 bundle: games_collection
 mode: default
 content:
+  field_game_category:
+    weight: 4
+    settings: {  }
+    third_party_settings:
+      conditional_fields:
+        b002c714-5edc-404e-a667-8d4d76cd2f80:
+          dependee: field_product
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: mobile-zedbet-arcade
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: games_collection
+          bundle: games_collection
+    type: options_select
+    region: content
+  field_game_category_slots:
+    weight: 6
+    settings: {  }
+    third_party_settings:
+      conditional_fields:
+        8592a1e2-8f00-4dbe-92ed-693f061ae6e3:
+          dependee: field_product
+          settings:
+            state: visible
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: mobile-zedbet-slots
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: games_collection
+          bundle: games_collection
+    type: options_select
+    region: content
   field_games:
     weight: 5
     settings:
@@ -43,7 +93,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_games_slots:
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -70,34 +120,34 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_product:
-    weight: 3
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_type:
-    weight: 4
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 1
+    weight: 0
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   name:
     type: string_textfield
-    weight: 0
+    weight: 3
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 2
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
