--- a/web/sites/mobile-zedbet/config/sync/core.entity_view_display.games_collection.games_collection.default.yml
+++ b/web/sites/mobile-zedbet/config/sync/core.entity_view_display.games_collection.games_collection.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.games_collection.games_collection.field_game_category
+    - field.field.games_collection.games_collection.field_game_category_slots
     - field.field.games_collection.games_collection.field_games
     - field.field.games_collection.games_collection.field_games_slots
     - field.field.games_collection.games_collection.field_product
@@ -16,6 +18,22 @@ targetEntityType: games_collection
 bundle: games_collection
 mode: default
 content:
+  field_game_category:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_game_category_slots:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_games:
     weight: 1
     label: above
