PACIFIC-1102 Update webcomposer_form_manager.form.japan_sign_up_form.password.yml

--- a/web/sites/zipang-casino/config/sync/webcomposer_form_manager.form.japan_sign_up_form.password.yml
+++ b/web/sites/zipang-casino/config/sync/webcomposer_form_manager.form.japan_sign_up_form.password.yml
@@ -1,7 +1,7 @@
 field_settings:
   label: パスワード
   placeholder: Yoko03John09
-  annotation: "他のサイトのパスワードを再利用しないようにしてください。パスワードは少なくとも以下が含まれている必要があります。:\r\n<ul style=\"list-style-type: none;\" class=\"password\">\r\n  <li class=\"li-item\"><i class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i> 大文字＋小文字.</li>\r\n  <li class=\"li-item\"><i class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i> 数字</li>\r\n  <li class=\"li-item\"><i class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i> 8文字以上</li>\r\n</ul>"
+  annotation: "他のサイトのパスワードを再利用しないようにしてください。パスワードは少なくとも以下が含まれている必要があります。:\r\n<ul style=\"list-style-type: none;\" class=\"password\">\r\n  <li class=\"li-item\"><i id=\"upper-lower\" class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i>  大文字＋小文字.</li>\r\n  <li class=\"li-item\"><i id=\"numbers\" class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i>  半角英数字</li>\r\n  <li class=\"li-item\"><i id=\"length\" class=\"fa fa-exclamation-circle\" aria-hidden=\"true\"></i>  8文字以上</li>\r\n</ul>"
 field_validations:
   required:
     enable: 1
@@ -59,7 +59,7 @@ field_validations:
     rule_description: ''
     weight: '0'
     parameters:
-      length: '6'
+      length: '8'
   max_length:
     enable: 0
     error_message: 'Maximum requirement not met'
