WEBSITE-3837 add ectgameId filed on ptplus

--- a/web/sites/ptplus/config/sync/core.entity_form_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_form_display.node.ptplus.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.ptplus.body
     - field.field.node.ptplus.field_desktop_keywords
+    - field.field.node.ptplus.field_external_game_id
     - field.field.node.ptplus.field_game_code
     - field.field.node.ptplus.field_game_ribbon
     - field.field.node.ptplus.field_game_thumbnail_big
@@ -48,6 +49,14 @@ content:
       placeholder: 'e.g., slots, top, live'
     third_party_settings: {  }
     type: string_textarea
+    region: content
+  field_external_game_id:
+    weight: 29
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   field_game_code:
     weight: 14
