--- a/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.node.ptplus.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.ptplus.body
     - field.field.node.ptplus.field_desktop_keywords
+    - field.field.node.ptplus.field_external_game_id
     - field.field.node.ptplus.field_game_code
     - field.field.node.ptplus.field_game_ribbon
     - field.field.node.ptplus.field_game_thumbnail_big
@@ -29,6 +30,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: basic_string
+    region: content
+  field_external_game_id:
+    weight: 10
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_code:
     weight: 1
